# ChangeLog for xfce-base/libxfce4menu
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4menu-9999.ebuild:
  Removed unneeded workaround, fix is in the eclass now

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
