@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST libxfce4menu-4.5.92.tar.bz2 403765 RMD160 aaba40429622c4aaf1ec1c84cb8084e4c0d1940e SHA1 df810e883842d73f833afe13d8f2a5b7967ae17d SHA256 21a1690c4920aa515e6d3ae18a508ff80c610cd044d488936b296bc671d2150d
+EBUILD libxfce4menu-4.5.92.ebuild 478 RMD160 f440e3f3c9fb72bf821c06e673aff01b4a8a50dc SHA1 3ec170d5ea1a1c2cbf06402e0cc2443ddc6d100d SHA256 012f577a3f0add4b4d8b056c6ad721bfc34796da81fb2c9f316dbf7e13054810
 EBUILD libxfce4menu-9999.ebuild 478 RMD160 f440e3f3c9fb72bf821c06e673aff01b4a8a50dc SHA1 3ec170d5ea1a1c2cbf06402e0cc2443ddc6d100d SHA256 012f577a3f0add4b4d8b056c6ad721bfc34796da81fb2c9f316dbf7e13054810
-MISC ChangeLog 344 RMD160 8bbc87e8728528994da7928653ea1b14f12d4e55 SHA1 eef1ca70deead0a49a8272bd43f75db04e63d192 SHA256 864decb91581186362924b456040a81e9a5628a1769dcfe5d82602ff15273a91
+MISC ChangeLog 487 RMD160 e434ceb0a1451e5d73e28cea60bef655416d405a SHA1 edc45fe1d0458a72b8b849d8cb3469dd3eab1737 SHA256 af2590d47b2e2fda5134778e6635e743a787d6eb314cf4623182dcd1efd73005
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa8aMQCfcmRxX6Z6dYPuBebPibyjKMrG
-e08AoMLBJYSTeorGgndiQkRKT99IqKtg
-=i23r
+iEYEARECAAYFAkkdthwACgkQKhnDs22gwa8KegCbBKql+mc6yWtDCshYjezNdUFP
+jaEAnjjYyTG98sW+lzcQvFxqK65NFk27
+=DMJ3
 -----END PGP SIGNATURE-----
