@@ -1,0 +1,20 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=1
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="Desktop menu library"
+HOMEPAGE="http://www.xfce.org/projects/libraries"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="debug"
+
+RDEPEND=">=dev-libs/glib-2.6:2
+	>=x11-libs/gtk+-2.6:2
+	>=xfce-base/libxfce4util-${XFCE_VERSION}"
+
+DOCS="AUTHORS ChangeLog NEWS README THANKS TODO"
